[package]
name = "of_dn_parser"
description = "Parser (and formatter) for OpenFinance Brasil standard distinguished names"
authors = ["cloudwalk.io"]
version = "0.2.1"
edition = "2021"
license = "MIT"
repository = "https://github.com/cloudwalk/of_dn_parser"
keywords = ["parser", "formatter", "openfinance", "certificate"]
categories = ["authentication", "encoding", "finance"]

[dependencies]
derive_more = { version = "0.99.17", default-features = false, features = ["display", "error", "from"] }
hex = { version = "0.4.3", default-features = false, features = ["std"] }

[dev-dependencies]
assert_matches = { version = "1.5.0", default-features = false }
pretty_assertions = { version = "1.4.0", default-features = false, features = ["std"] }
